# stitchMeshFork

./: CMakeLists.txt  README.md
rewrite/Mesh/inc/: HalfEdgeMesh.h  TrigMesh.h
rewrite/Mesh/src/: HalfEdgeMesh.cpp  TrigMesh.cpp
rewrite/Stitch/: CMakeLists.txt  main.cpp
rewrite/Stitch/resource/: icons.rc
src/: meshio.cpp  meshio.h
src/core/: dual.cpp  dual.h  stitchmeshing.cpp
